# ship_inference_py_interface

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  classified_south.csv  intention_model_from_code.xdsl
src/: intention_model_geometry_interface.cpp  intention_model_interface.cpp  intention_model_parameters_interface.cpp
tests/: test_intention_interface.py  test_interface.py  test_parameters_interface.py
